added new anonymization interface